<resources>
    <string name="app_name">MarvelComics</string>
    <string name="facebook_app_id">117076858826092</string>
    <string name="outSesion">Cerrar sesión</string>
    <string name="title">Título</string>
    <string name="price">Precio</string>
    <string name="description">Description</string>
    <string name="pageCount">Pages</string>
    <string name="date">Date</string>
    <string name="favButton">Add to favorites</string>
    <string name="profileFr">You dont have a profile, make it now</string>
    <string name="name">Name</string>
    <string name="ln">Lastname</string>
    <string name="mail">Mail</string>
    <string name="Date">Birthdate</string>
    <string name="loading">Loading…</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_profile">Profile</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
</resources>
