<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".frontEnd.ComicSelect"
    android:orientation="vertical"
    android:layout_margin="16dp"
    android:weightSum="10">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="6"
            android:orientation="horizontal">
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1">
                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:id="@+id/imageSelect"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_marginStart="5dp"
                android:orientation="vertical">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/title"
                    android:textColor="@color/primary_dark"
                    android:textStyle="bold"
                    android:layout_marginTop="20dp"
                    android:textSize="18dp"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/selectTitle"
                    android:text="@string/title"
                    android:textColor="@color/icons"
                    android:textSize="15dp"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/price"
                    android:textColor="@color/primary_dark"
                    android:textStyle="bold"
                    android:layout_marginTop="5dp"
                    android:textSize="18dp"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/title"
                    android:id="@+id/selectPrice"
                    android:textColor="@color/icons"
                    android:textSize="15dp"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/pageCount"
                    android:textColor="@color/primary_dark"
                    android:textStyle="bold"
                    android:layout_marginTop="5dp"
                    android:textSize="18dp"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/title"
                    android:id="@+id/selectPages"
                    android:textColor="@color/icons"
                    android:textSize="15dp"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/date"
                    android:textColor="@color/primary_dark"
                    android:textStyle="bold"
                    android:layout_marginTop="5dp"
                    android:textSize="18dp"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/selectDate"
                    android:textColor="@color/icons"
                    android:textSize="15dp"/>
                <Button
                    style="@style/MyButtonTheme"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="12dp"
                    android:background="@color/primary_dark"
                    android:textStyle="bold"
                    android:id="@+id/favoritesButton"
                    android:layout_marginTop="10dp"
                    android:layout_marginStart="5dp"
                    android:textColor="@color/icons"
                    android:text="@string/favButton"
                    android:layout_gravity="center_horizontal"/>
            </LinearLayout>


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="4">
            <TabHost
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/tabComics">
                <LinearLayout
                    android:id="@+id/line"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <TabWidget
                        android:id="@android:id/tabs"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"></TabWidget>

                    <FrameLayout
                        android:id="@android:id/tabcontent"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">
                        <include
                            android:id="@+id/tabDescription"
                            layout="@layout/layout_description"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content">
                        </include>
                        <include
                            android:id="@+id/tabCharacters"
                            layout="@layout/layout_characters"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content">
                        </include>
                    </FrameLayout>
                </LinearLayout>
            </TabHost>

        </LinearLayout>
    </LinearLayout>

    </ScrollView>

</LinearLayout>
